# pow

./: .gitignore  README.md  pow.toml  pyproject.toml  verify_isaacsim.py
.agents/skills/pow/: SKILL.md
.agents/workflows/: build.md  lint.md  setup.md
.antigravity/: rules.md
docs/: cli-reference.md  configuration.md  lint-rules.md
isaac_powerpack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
~/mnt/vault/nvsim/isaacsim_assets/: assets_profile.toml
