[project]
name = "isaac-powerpack"
version = "0.1.0a4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = ["distro>=1.9.0"]
license = "Apache-2.0"

[tool.uv.workspace]
members = ["packages/pow-cli"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-mock>=3.15.1", "PyYAML>=6.0.1"]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-p no:launch_testing -p no:launch_ros"
markers = ["cli: marks tests as CLI tests"]
